Fixed navbar on mobile

--- a/StreetTalk/wwwroot/css/homepage.css
+++ b/StreetTalk/wwwroot/css/homepage.css
@@ -7,7 +7,7 @@
 }
 
 .homepage-hero-text {
-    font-size: 6rem;
+    font-size: 14vw;
 }
 
 .homepage-hero-subtext {
@@ -15,10 +15,12 @@
     color: #575757;
     font-weight: normal;
     font-size: 2rem;
+    text-align: center;
 }
 
 .homepage-row {
     padding: 8px;
+    overflow-x: hidden;
 }
 
 .homepage-row:first-of-type {
